[gd_scene load_steps=9 format=3 uid="uid://w02mv2oawevh"]

[ext_resource type="Shader" uid="uid://dyr6u3sn5ymgf" path="res://Displays/DisplayTask/DisplayTask.gdshader" id="1_14pxy"]
[ext_resource type="Script" uid="uid://cx7trjc8lsrpw" path="res://Displays/DisplayStats/display_stats.gd" id="1_u8jmi"]
[ext_resource type="Texture2D" uid="uid://dmvke8k5ce6yc" path="res://Task/white-rect.png" id="2_syucl"]
[ext_resource type="PackedScene" uid="uid://d0hi00w12830g" path="res://Additional Scenes/taskStat.tscn" id="3_nulnb"]
[ext_resource type="Texture2D" uid="uid://d2qep1xxaw7ef" path="res://Task/white-square-1.png" id="3_qwjd1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pqvxl"]
shader = ExtResource("1_14pxy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wuvtp"]
shader = ExtResource("1_14pxy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dqa0d"]
shader = ExtResource("1_14pxy")

[node name="DisplayTask" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource("1_u8jmi")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
material = SubResource("ShaderMaterial_pqvxl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_wuvtp")
layout_mode = 2
texture = ExtResource("2_syucl")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TaskStat" parent="HBoxContainer/TextureRect3/VBoxContainer" instance=ExtResource("3_nulnb")]
layout_mode = 2

[node name="TaskStat2" parent="HBoxContainer/TextureRect3/VBoxContainer" instance=ExtResource("3_nulnb")]
layout_mode = 2

[node name="TaskStat3" parent="HBoxContainer/TextureRect3/VBoxContainer" instance=ExtResource("3_nulnb")]
layout_mode = 2

[node name="TaskStat4" parent="HBoxContainer/TextureRect3/VBoxContainer" instance=ExtResource("3_nulnb")]
layout_mode = 2

[node name="TaskStat5" parent="HBoxContainer/TextureRect3/VBoxContainer" instance=ExtResource("3_nulnb")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_dqa0d")
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_qwjd1")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Mem" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Reac" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="FandA" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Dec" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Button2" type="Button" parent="HBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"
